--- a/pom.xml
+++ b/pom.xml
@@ -10,22 +10,30 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+<!--        версия rest-assured-->
+        <rest.assured.version>5.3.0</rest.assured.version>
+<!--        версия junit4-->
+        <junit.version>4.13.2</junit.version>
         <!-- версия Aspectj -->
         <aspectj.version>1.9.7</aspectj.version>
         <!-- версия Allure -->
         <allure.version>2.9.0</allure.version>
     </properties>
+
     <dependencies>
+<!--        rest-assured-->
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>5.3.0</version>
+            <version>${rest.assured.version}</version>
         </dependency>
+<!--        junit4-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <version>${junit.version}</version>
         </dependency>
+<!--        jackson-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -49,6 +57,7 @@
             <version>${aspectj.version}</version>
         </dependency>
     </dependencies>
+
     <build>
         <pluginManagement>
             <plugins>
